[package]
name = "supercut"
description = "A cli tool and lib to cut images using a mask."
version = "0.1.1-alpha.0"
authors = ["Andras Mocsary <425404+mocsy@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/mocsy/supercut"
documentation = "https://docs.rs/supercut/"
keywords = ["image", "background","cli"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
publish = true
exclude = ["**/*.jpg","**/*.png"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
